[package]
name = "imei-info"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.206", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros"] }
