[package]
name = "imei-info"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An easy-to-use wrapper for the IMEI.info API, used for retrieving information about mobile devices using IMEIs and other identifiers."
keywords = ["imei", "imeiinfo", "cellular", "phone", "identification"]
categories = ["api-bindings"]
repository = "https://github.com/lthoerner/imei-info"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.206", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["macros"] }
dotenvy = { version = "0.15.7" }
